ci: update test commands for better debugging

--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -9,9 +9,9 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules yarn jest --runInBand --detectOpenHandles --forceExit",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules yarn jest --runInBand --detectOpenHandles --forceExit --no-cache",
     "test:ci": "yarn test --ci",
-    "test:old": "yarn jest",
+    "test:debug": "node --trace-warnings --experimental-vm-modules ../../node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --forceExit --no-cache",
     "test:watch": "yarn jest --watch",
     "test:coverage": "yarn jest --coverage",
     "format": "prettier . '**/*.+(js|ts|json)' --write",
@@ -28,6 +28,8 @@
     "@moralisweb3/core": "^2.0.0-alpha.1",
     "@moralisweb3/server": "^2.0.0-alpha.1",
     "@moralisweb3/evm": "^2.0.0-alpha.1",
-    "@moralisweb3/evm-api": "^2.0.0-alpha.1"
+    "@moralisweb3/evm-api": "^2.0.0-alpha.1",
+    "@moralisweb3/evm-connector-utils": "^2.0.0-alpha.1",
+    "eventemitter3": "^4.0.7"
   }
 }
