--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,11 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib/index.*",
+    "lib/**/*.d.ts",
+    "dist"
+  ],
   "scripts": {
     "test": "yarn jest --runInBand --detectOpenHandles --forceExit",
     "test:ci": "yarn test --ci",
@@ -16,11 +21,11 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "rollup -c",
+    "build:dev": "dev=true rollup -c",
+    "dev": "rollup -c --watch"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
     "prettier": "^2.5.1",
     "typed-emitter": "^2.1.0",
     "typescript": "^4.5.5"
@@ -29,8 +34,9 @@
     "@ethersproject/address": "^5.6.0",
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/units": "^5.6.0",
+    "@ethersproject/transactions": "^5.6.0",
     "@xstate/fsm": "^2.0.0",
-    "ky": "^0.30.0",
-    "ky-universal": "^0.10.1"
+    "eventemitter3": "^4.0.7",
+    "axios": "^0.27.2"
   }
 }
