--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -7,6 +7,11 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib/index.*",
+    "lib/**/*.d.ts",
+    "dist"
+  ],
   "scripts": {
     "test": "echo 'not implemented'",
     "test:coverage": "yarn run test --coverage",
@@ -15,13 +20,13 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "rollup -c",
+    "build:dev": "dev=true rollup -c",
+    "dev": "rollup -c --watch",
     "gen:contracts": "rm -rf src/Contract/generated && typechain --target=ethers-v5 --out-dir=src/Contract/generated 'src/Contract/abis/*.json' "
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.0.0",
-    "eslint": "^8.11.0",
     "jest": "^28.0.3",
     "prettier": "^2.5.1",
     "typechain": "^8.0.0",
