--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -7,22 +7,28 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib/index.*",
+    "lib/**/*.d.ts",
+    "dist"
+  ],
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
+    "build": "rollup -c rollup.config.js",
+    "build:dev": "dev=true rollup -c",
     "gen:types": "openapi-typescript https://deep-index.moralis.io/api-docs/v2/swagger.json --output src/generated/types.ts",
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
     "openapi-typescript": "^5.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.0.0-alpha.1"
+    "@moralisweb3/core": "^2.0.0-alpha.1",
+    "ethers": "^5.6.2"
   }
 }
