--- a/packages/evmConnectors/EvmConnectorUtils/package.json
+++ b/packages/evmConnectors/EvmConnectorUtils/package.json
@@ -7,16 +7,21 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib/index.*",
+    "lib/**/*.d.ts",
+    "dist"
+  ],
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "rollup -c",
+    "build:dev": "dev=true rollup -c",
+    "dev": "rollup -c --watch"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
