--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,11 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib/index.*",
+    "lib/**/*.d.ts",
+    "dist"
+  ],
   "scripts": {
     "test": "echo 'not implemented'",
     "test:coverage": "yarn run test --coverage",
@@ -15,12 +20,12 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "rollup -c",
+    "build:dev": "dev=true rollup -c",
+    "dev": "rollup -c --watch"
   },
   "devDependencies": {
     "@types/parse": "^2.18.13",
-    "eslint": "^8.7.0",
     "prettier": "^2.5.1",
     "typed-emitter": "^2.1.0",
     "typescript": "^4.5.5"
