--- a/demos/test-app-all/.env.example
+++ b/demos/test-app-all/.env.example
@@ -3,3 +3,4 @@ REACT_APP_SERVER_URL = ""
 REACT_APP_APP_ID = ""
 REACT_APP_API_KEY = ""
 REACT_APP_MORALIS_SECRET = ""
+REACT_APP_MAGIC_LINK_KEY = ""
