test: Use non-esm jest test environment

--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -9,9 +9,8 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules yarn jest --runInBand --detectOpenHandles --forceExit --no-cache",
+    "test": "yarn jest --runInBand --detectOpenHandles --forceExit --no-cache",
     "test:ci": "yarn test --ci",
-    "test:debug": "node --trace-warnings --experimental-vm-modules ../../node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --forceExit --no-cache",
     "test:watch": "yarn jest --watch",
     "test:coverage": "yarn jest --coverage",
     "format": "prettier . '**/*.+(js|ts|json)' --write",
