--- a/packages/integration/tsconfig.json
+++ b/packages/integration/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "declarationDir": "./dist",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noUnusedLocals": false
   },
   "include": ["src/**/*", "test/**/*", "types/**/*"]
 }
