--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         id: cache
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}s
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}s
       - name: Install packages
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
@@ -55,7 +55,7 @@ jobs:
         id: cache
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}s
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}s
       - name: ESLint
         run: yarn lint
         continue-on-error: true
@@ -87,6 +87,30 @@ jobs:
         id: cache
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}s
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}s
       - name: Prettier
         run: yarn format:check
+
+  test:
+    name: Test
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [16]
+    needs: setup
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Setup Node 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - name: Use cache dependencies
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}s
+      - name: Test
+        run: yarn test:ci
