--- a/packages/evmConnectors/EvmWeb3authConnector/package.json
+++ b/packages/evmConnectors/EvmWeb3authConnector/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "rollup -c",
-    "dev": "rollup -c --watch"
+    "build:dev": "dev=true rollup -c"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
