--- a/packages/evmConnectors/EvmConnectorUtils/package.json
+++ b/packages/evmConnectors/EvmConnectorUtils/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "rollup -c",
-    "build:dev": "dev=true rollup -c",
+    "build:dev": "cross-env dev=true rollup -c",
     "dev": "rollup -c --watch"
   },
   "devDependencies": {
