--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -18,7 +18,7 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "rollup -c rollup.config.js",
-    "build:dev": "dev=true rollup -c",
+    "build:dev": "cross-env dev=true rollup -c",
     "gen:types": "openapi-typescript https://deep-index.moralis.io/api-docs/v2/swagger.json --output src/generated/types.ts",
     "dev": "tsc --watch"
   },
