--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint": "^8.19.0",
-    "eslint-plugin-jest": "^26.5.3",
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "add": "^2.0.6",
     "cross-env": "^7.0.3",
+    "eslint": "^8.19.0",
+    "eslint-plugin-jest": "^26.5.3",
     "jest": "28",
     "msw": "^0.43.0",
     "nx": "14.1.7",
