--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^28.0.3",
     "typescript": "^4.5.5",
-    "yarn": "^1.22.17"
+    "yarn": "^1.22.17",
+    "plop": "^3.1.0"
   },
   "scripts": {
     "build": "bash run_scripts.sh build",
@@ -48,7 +49,8 @@
     "test:ci": "yarn nx run-many --target=test:ci --all",
     "format": "yarn nx run-many --target=format --all",
     "format:check": "yarn nx run-many --target=format:check --all",
-    "release": "yarn build && changeset publish"
+    "release": "yarn build && changeset publish",
+    "new": "plop"
   },
   "workspaces": {
     "packages": [
