--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -5,10 +5,7 @@
     "jsx": "react-jsx",
     "outDir": "./lib/",
     "rootDir": "./src",
-    "baseUrl": "./src",
+    "baseUrl": "./src"
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ]
+  "include": ["src/**/*", "types/**/*"]
 }
