--- a/packages/evmConnectors/EvmMetamaskConnector/package.json
+++ b/packages/evmConnectors/EvmMetamaskConnector/package.json
@@ -13,8 +13,8 @@
     "dist"
   ],
   "scripts": {
-    "format": "prettier . '**/*.+(js|ts|json)' --write",
-    "format:check": "prettier . '**/*.+(js|ts|json)' --check",
+    "format": "prettier . \"**/*.+(js|ts|json)\" --write",
+    "format:check": "prettier . \"**/*.+(js|ts|json)\" --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "rollup -c",
