global react polishing

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -5,7 +5,9 @@
     "jsx": "react-jsx",
     "outDir": "./lib/",
     "rootDir": "./src",
-    "baseUrl": "./src"
   },
-  "include": ["src/**/*", "types/**/*"]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ]
 }
