feat: add Auth package and parse-server demo
chore: remove logs

fix: update statement

docs: update changeset

chore: cleanup

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "packages": [
       "packages/*",
       "demos/*",
+      "demos/demo-parse-server-auth/*",
       "packages/evmConnectors/*",
       "packages/solConnectors/*"
     ]
