--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@moralisweb3/api-utils": "^2.0.0-alpha.1",
     "@moralisweb3/core": "^2.0.0-alpha.1",
     "ethers": "^5.6.2"
   }
