--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/api-utils",
+  "name": "@moralisweb3/api",
   "author": "Moralis",
   "version": "2.0.0-alpha.1",
   "license": "MIT",
