docs: update changeset

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": ["@changesets/changelog-github", { "repo": "MoralisWeb3/Moralis-JS-SDK" }],
   "commit": false,
-  "fixed": [["@moralisweb3/core", "@moralisweb3/evm", "@moralisweb3/evm-api", "@moralisweb3/server"]],
+  "fixed": [["@moralisweb3/core", "@moralisweb3/evm-api"]],
   "linked": [],
   "access": "public",
   "baseBranch": "alpha",
