--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "demos/*",
-      "demos/demo-parse-server-auth/*",
-      "packages/evmConnectors/*",
-      "packages/solConnectors/*"
+      "demos/*"
     ]
   },
   "dependencies": {}
