--- a/demos/demo-parse-server-auth/package.json
+++ b/demos/demo-parse-server-auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-parse-server-auth-server",
-  "version": "2.0.0-alpha.1",
-  "main": "index.js",
+  "version": "2.0.0-alpha.2",
+  "main": "dist/index.js",
   "private": true,
   "dependencies": {
     "dotenv": "^16.0.1",
@@ -9,7 +9,8 @@
     "express": "^4.18.1",
     "parse-dashboard": "^4.1.4",
     "parse-server": "^5.2.4",
-    "moralis": "^2.0.0-alpha.1"
+    "moralis": "^2.0.0-alpha.2",
+    "@moralisweb3/core": "^2.0.0-alpha.2"
   },
   "devDependencies": {
     "mongodb-runner": "^4.9.0",
@@ -18,6 +19,7 @@
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
+    "build": "tsc",
     "dev:db-start": "mongodb-runner start",
     "dev:db-stop": "mongodb-runner stop"
   }
