--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moralisweb3/auth",
   "author": "Moralis",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
@@ -20,10 +20,9 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "rollup -c",
-    "build:dev": "dev=true rollup -c",
-    "dev": "rollup -c --watch",
-    "gen:types": "openapi-typescript https://auth-api.do-prod-1.moralis.io/api-json --output src/generated/types.ts"
+    "gen:types": "openapi-typescript https://auth-api.do-prod-1.moralis.io/documentation-json --output src/generated/types.ts",
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "devDependencies": {
     "jest": "^28.0.3",
@@ -32,6 +31,6 @@
     "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.0.0-alpha.1"
+    "@moralisweb3/core": "^2.0.0-alpha.2"
   }
 }
