--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -9,8 +9,7 @@
   "sideEffects": false,
   "files": [
     "lib/index.*",
-    "lib/**/*.d.ts",
-    "dist"
+    "lib/**/*.d.ts"
   ],
   "scripts": {
     "format": "prettier . \"**/*.+(js|ts|json)\" --write",
