--- a/tsconfig.package.json
+++ b/tsconfig.package.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ESNext"],
-    "module": "esnext",
+    "module": "CommonJS",
     "allowJs": true,
     "moduleResolution": "node",
     "noEmitOnError": true,
@@ -25,7 +25,8 @@
     "sourceMap": true,
     "target": "es5",
     "paths": {
-      "@moralisweb3/*": ["./packages/*"]
+      "@moralisweb3/*": ["./packages/*"],
+      "@moralisweb3/evm-api": ["./packages/evmApi"]
     },
     "useUnknownInCatchVariables": false
   },
