feat: add Auth package and parse-server demo
* feat: add Auth package and parse-server demo

chore: remove logs

fix: update statement

docs: update changeset

chore: cleanup

* chore: revert debug changes

* deleted empty file.

* chore: cleanup and improvements

* chore: fixes after merge and refactor

* style: ignore formatting on generated code

Co-authored-by: Bart Tadych <b4rtaz@gmail.com>

--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "demos/*",
-      "packages/evmConnectors/*",
-      "packages/solConnectors/*"
+      "demos/*"
     ]
   },
   "dependencies": {}
