ci: fix nx building

--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
     "eslint-plugin-jest": "^26.5.3",
     "jest": "28",
     "msw": "^0.43.0",
-    "nx": "14.1.7",
+    "nx": "^14.4.3",
     "ts-jest": "^28.0.3",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
   },
   "scripts": {
-    "build": "bash run_scripts.sh build",
-    "build:dev": "bash run_scripts.sh build:dev",
+    "build": "yarn nx run-many --target=build --all",
+    "build:clean": "yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
     "lint": "yarn nx run-many --target=lint --all",
     "clean": "yarn nx run-many --target=clean --all",
     "test": "yarn nx run-many --target=test --all",
     "test:watch": "yarn nx run-many --target=test:watch --all",
-    "test:coverage": "yarn turbo run test:coverage --parallel",
-    "test:ci": "yarn nx run-many --target=test:ci --all",
+    "test:coverage": "yarn nx run-many test:coverage --parallel",
     "format": "yarn nx run-many --target=format --all",
     "format:check": "yarn nx run-many --target=format:check --all",
     "release": "yarn build && changeset publish"
