--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -19,7 +19,7 @@
     "format": "prettier . '**/*.+(js|ts|json)' --write",
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
-    "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
+    "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
     "gen:types": "openapi-typescript https://auth-api.do-prod-1.moralis.io/documentation-json --output src/generated/types.ts",
     "build": "tsc",
     "dev": "tsc --watch"
@@ -31,6 +31,7 @@
     "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.0.0-alpha.2"
+    "@moralisweb3/core": "^2.0.0-alpha.2",
+    "@moralisweb3/api": "^2.0.0-alpha.2"
   }
 }
