--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "28",
     "msw": "^0.43.0",
     "nx": "^14.4.3",
+    "prettier": "^2.7.1",
     "ts-jest": "^28.0.3",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
