--- a/packages/solUtils/package.json
+++ b/packages/solUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/sol-api",
+  "name": "@moralisweb3/sol-utils",
   "author": "Moralis",
   "version": "2.0.0-alpha.2",
   "license": "MIT",
@@ -27,9 +27,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/api": "^2.0.0-alpha.2",
-    "@moralisweb3/core": "^2.0.0-alpha.2",
-    "@moralisweb3/sol-utils": "^2.0.0-alpha.2",
-    "ethers": "^5.6.2"
+    "@ethersproject/bignumber": "^5.6.0",
+    "@ethersproject/units": "^5.6.0",
+    "@moralisweb3/core": "^2.0.0-alpha.2"
   }
 }
