--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -32,6 +32,6 @@
   },
   "dependencies": {
     "@moralisweb3/core": "^2.0.0-alpha.2",
-    "@moralisweb3/api": "^2.0.0-alpha.2"
+    "@moralisweb3/api-utils": "^2.0.0-alpha.2"
   }
 }
