--- a/packages/solUtils/package.json
+++ b/packages/solUtils/package.json
@@ -13,6 +13,9 @@
     "dist"
   ],
   "scripts": {
+    "test": "yarn jest --runInBand --detectOpenHandles --forceExit --ci",
+    "test:coverage": "yarn run test --coverage",
+    "test:watch": "yarn run test --watch",
     "format": "prettier . \"**/*.+(js|ts|json)\" --write",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "format:check": "prettier . \"**/*.+(js|ts|json)\" --check",
