--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/api",
+  "name": "@moralisweb3/api-utils",
   "author": "Moralis",
   "version": "2.0.0-alpha.2",
   "license": "MIT",
