--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@moralisweb3/auth": "^2.0.0-alpha.2",
     "@moralisweb3/core": "^2.0.0-alpha.2",
-    "@moralisweb3/api": "^2.0.0-alpha.2",
+    "@moralisweb3/api-utils": "^2.0.0-alpha.2",
     "@moralisweb3/evm-api": "^2.0.0-alpha.2",
     "@moralisweb3/evm-utils": "^2.0.0-alpha.2",
     "@moralisweb3/sol-api": "^2.0.0-alpha.2"
