--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,11 +26,11 @@
   "devDependencies": {
     "prettier": "^2.5.1",
     "typed-emitter": "^2.1.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "@ethersproject/bignumber": "^5.6.0",
+    "@ethersproject/units": "^5.6.0"
   },
   "dependencies": {
-    "@ethersproject/bignumber": "^5.6.0",
-    "@ethersproject/units": "^5.6.0",
     "@xstate/fsm": "^2.0.0",
     "eventemitter3": "^4.0.7",
     "axios": "^0.27.2"
