--- a/packages/solApi/package.json
+++ b/packages/solApi/package.json
@@ -29,7 +29,6 @@
   "dependencies": {
     "@moralisweb3/api-utils": "^2.0.0-alpha.2",
     "@moralisweb3/core": "^2.0.0-alpha.2",
-    "@moralisweb3/sol-utils": "^2.0.0-alpha.2",
-    "ethers": "^5.6.2"
+    "@moralisweb3/sol-utils": "^2.0.0-alpha.2"
   }
 }
