--- a/demos/nextjs-nextauth-no-be/package.json
+++ b/demos/nextjs-nextauth-no-be/package.json
@@ -1,24 +1,28 @@
 {
-    "name": "nextjs-nextauth-no-be",
-    "version": "2.0.0-alpha.2",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "next": "12.2.3",
-        "react": "18.2.0",
-        "react-dom": "18.2.0"
-    },
-    "devDependencies": {
-        "@types/node": "18.0.6",
-        "@types/react": "18.0.15",
-        "@types/react-dom": "18.0.6",
-        "eslint": "8.20.0",
-        "eslint-config-next": "12.2.3",
-        "typescript": "4.7.4"
-    }
+  "name": "nextjs-nextauth-no-be",
+  "version": "2.0.0-alpha.2",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "12.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "moralis": "^2.0.0-alpha.2",
+    "wagmi": "^0.5.11",
+    "next-auth": "4.10.2",
+    "axios": "^0.27.2"
+  },
+  "devDependencies": {
+    "@types/node": "18.0.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
+    "typescript": "4.7.4"
+  }
 }
