--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,9 +26,7 @@
   "devDependencies": {
     "prettier": "^2.5.1",
     "typed-emitter": "^2.1.0",
-    "typescript": "^4.5.5",
-    "@ethersproject/bignumber": "^5.6.0",
-    "@ethersproject/units": "^5.6.0"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@xstate/fsm": "^2.0.0",
