--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,7 +6,7 @@
     [
       "@moralisweb3/core",
       "@moralisweb3/auth",
-      "@moralisweb3/api",
+      "@moralisweb3/api-utils",
       "@moralisweb3/evm-utils",
       "@moralisweb3/evm-api",
       "@moralisweb3/sol-api"
