chore: exclude test and demo apps from changeset

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -16,5 +16,5 @@
   "access": "public",
   "baseBranch": "alpha",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": ["test-integration", "test-node", "demo-nextjs", "demo-parse-server"]
 }
