--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/integration",
+  "name": "test-integration",
   "author": "Moralis",
   "version": "2.0.0-alpha.3",
   "license": "MIT",
