--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-integration",
   "author": "Moralis",
-  "version": "2.0.0-alpha.3",
+  "version": "1.0.0",
   "license": "MIT",
   "private": true,
   "main": "./lib/index.js",
