--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo-parse-server",
-  "version": "2.0.0-alpha.3",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
