--- a/packages/solApi/package.json
+++ b/packages/solApi/package.json
@@ -8,9 +8,7 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "files": [
-    "lib/index.*",
-    "lib/**/*.d.ts",
-    "dist"
+    "lib/*"
   ],
   "scripts": {
     "format": "prettier . \"**/*.+(js|ts|json)\" --write",
