rework of supabase demo

--- a/demos/demo-supabase-auth/.env.example
+++ b/demos/demo-supabase-auth/.env.example
@@ -1,5 +1,7 @@
 SUPABASE_PUBLIC_ANON=''
+SUPABASE_SERVICE_KEY=''
 SUPABASE_URL=''
 MORALIS_API_KEY=''
 PORT=3000
 APP_NAME='supabase-demo'
+SUPABASE_JWT=''
