--- a/demos/demo-supabase-auth/package.json
+++ b/demos/demo-supabase-auth/package.json
@@ -9,9 +9,12 @@
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
-    "moralis": "^2.0.0-alpha.3"
+    "jsonwebtoken": "^8.5.1",
+    "moralis": "^2.0.0-alpha.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
