--- a/demos/demo-supabase-auth/package.json
+++ b/demos/demo-supabase-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo-subabase-auth",
-  "version": "2.0.0-alpha.3",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
