simple demo website.

--- a/demos/firebase-proxy/firebase.json
+++ b/demos/firebase-proxy/firebase.json
@@ -9,5 +9,13 @@
       "yarn --cwd \"$RESOURCE_DIR\" run lint",
       "yarn --cwd \"$RESOURCE_DIR\" run build"
     ]
+  },
+  "hosting": {
+    "public": "./hosting"
+  },
+  "emulators": {
+    "hosting": {
+      "port": 5555
+    }
   }
 }
