--- a/demos/firebase-proxy/functions/package.json
+++ b/demos/firebase-proxy/functions/package.json
@@ -19,8 +19,7 @@
     "moralis": "^2.0.0-beta.9",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
-    "firebase-functions-rate-limiter": "^3.9.1",
-    "cors": "^2.8.5"
+    "firebase-functions-rate-limiter": "^3.9.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
