PR updates + ratelimit class

--- a/demos/parse-server/.env.example
+++ b/demos/parse-server/.env.example
@@ -14,3 +14,4 @@ APPLICATION_ID = 'APPLICATION_ID'
 SERVER_URL = 'http://localhost:1337/server'
 
 ALLOW_INSECURE_HTTP = 'true'
+REDIS_URL='redis://localhost:6379'
