--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -4,13 +4,14 @@
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
+    "@moralisweb3/core": "^2.0.1",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
+    "moralis": "^2.0.1",
     "parse-dashboard": "^4.1.4",
     "parse-server": "^5.2.4",
-    "moralis": "^2.0.1",
-    "@moralisweb3/core": "^2.0.1"
+    "redis": "^4.2.0"
   },
   "devDependencies": {
     "mongodb-runner": "^4.9.0",
