--- a/packages/firebaseFunctions/package.json
+++ b/packages/firebaseFunctions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/firebase",
+  "name": "@moralisweb3/firebase-functions",
   "author": "Moralis",
   "version": "2.0.1",
   "license": "MIT",
