--- a/demos/firebase-proxy/functions/package.json
+++ b/demos/firebase-proxy/functions/package.json
@@ -16,8 +16,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "moralis": "^2.0.0",
-    "@moralisweb3/firebase": "^2.0.0",
+    "moralis": "^2.0.1",
+    "@moralisweb3/firebase-functions": "^2.0.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "firebase-functions-rate-limiter": "^3.9.1"
