firebase auth demo.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "packages": [
       "packages/*",
       "demos/*",
-      "demos/firebase-proxy/*"
+      "demos/firebase-proxy/*",
+      "demos/firebase-auth/*"
     ]
   },
   "dependencies": {}
