--- a/demos/express/package.json
+++ b/demos/express/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "demo-express-proxy",
+  "name": "@moralisweb3/express",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "private": true,
+  "sideEffects": false,
+  "files": [
+    "lib/*"
+  ],
   "dependencies": {
     "@moralisweb3/core": "^2.0.1",
-    "@moralisweb3/express": "1.0.0",
     "@types/express-rate-limit": "^6.0.0",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
@@ -20,6 +24,10 @@
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "format": "prettier . \"**/*.+(js|ts|json)\" --write",
+    "format:check": "prettier . \"**/*.+(js|ts|json)\" --check",
+    "lint": "eslint . --ext .js,.ts,.tsx,jsx",
+    "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx"
   }
 }
