feat: firebase proxy demo + firebase auth demo. (#566)
* firebase proxy demo.
* @moralisweb3/firebase package.
* firebase auth demo.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "demos/*"
+      "demos/*",
+      "demos/firebase-proxy/*",
+      "demos/firebase-auth/*"
     ]
   },
   "dependencies": {}
