--- a/demos/firebase-auth/functions/tsconfig.json
+++ b/demos/firebase-auth/functions/tsconfig.json
@@ -6,7 +6,9 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "compileOnSave": true,
   "include": [
