--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "nx": "^14.4.3",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.3",
+    "typedoc": "^0.23.10",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
   },
   "scripts": {
     "build": "yarn nx run-many --target=build --all",
+    "build:docs": "yarn typedoc",
     "build:clean": "nx reset && yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
     "lint": "yarn nx run-many --target=lint --all",
