--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "eslint": "^8.22.0",
+    "ethers": "5.6.9",
+    "moralis": "^2.0.2",
     "next": "12.2.3",
+    "next-auth": "4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "moralis": "^2.0.2",
-    "wagmi": "^0.5.11",
-    "next-auth": "4.10.2",
-    "axios": "^0.27.2",
-    "ethers": "5.6.9"
+    "wagmi": "^0.5.11"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
