chore: add separate eslint package

--- a/demos/demo-supabase-auth/package.json
+++ b/demos/demo-supabase-auth/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint --ext .js,.ts src"
   }
 }
