--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -23,14 +23,15 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "eslint-plugin-jest": "^26.8.3",
     "jest": "^28.0.3",
+    "openapi-typescript": "^5.2.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5",
-    "openapi-typescript": "^5.2.0"
+    "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.0.2",
     "@moralisweb3/api-utils": "^2.0.2",
+    "@moralisweb3/core": "^2.0.2",
     "@moralisweb3/evm-utils": "^2.0.2"
   }
 }
