--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,9 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-jest": "^26.8.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
