--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.1",
     "moralis": "^2.0.3",
     "parse-dashboard": "^4.1.4",
     "parse-server": "^5.2.4"
