docs: create examples overview

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "add": "^2.0.6",
+    "archiver": "^5.3.1",
     "cross-env": "^7.0.3",
+    "fs-extra": "^10.1.0",
+    "glob-fs": "^0.1.7",
     "jest": "28",
     "msw": "^0.43.0",
     "nx": "^14.4.3",
@@ -27,7 +30,8 @@
   },
   "scripts": {
     "build": "yarn nx run-many --target=build --all",
-    "build:docs": "yarn typedoc",
+    "build:examples-docs": "node ./scripts/buildExamples.js",
+    "build:docs": "yarn typedoc && yarn build:examples-docs",
     "gen:api-types": "yarn nx run-many --target=gen:api-types --all",
     "build:clean": "nx reset && yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
