--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/parser": "^5.30.0",
     "add": "^2.0.6",
     "archiver": "^5.3.1",
+    "cheerio": "^1.0.0-rc.12",
     "cross-env": "^7.0.3",
     "fs-extra": "^10.1.0",
     "glob-fs": "^0.1.7",
