--- a/packages/solUtils/package.json
+++ b/packages/solUtils/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.0.3"
+    "@moralisweb3/core": "^2.0.3",
+    "@solana/web3.js": "^1.53.0"
   }
 }
