chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@typescript-eslint/parser": "^5.30.0",
     "add": "^2.0.6",
     "archiver": "^5.3.1",
-    "cheerio": "^1.0.0-rc.12",
     "cross-env": "^7.0.3",
     "fs-extra": "^10.1.0",
     "glob-fs": "^0.1.7",
@@ -25,6 +24,7 @@
     "msw": "^0.43.0",
     "nx": "^14.4.3",
     "prettier": "^2.7.1",
+    "rdme": "^7.5.0",
     "ts-jest": "^28.0.3",
     "typedoc": "^0.23.10",
     "typedoc-plugin-markdown": "^3.13.4",
@@ -34,7 +34,7 @@
   "scripts": {
     "build": "yarn nx run-many --target=build --all",
     "build:examples-docs": "node ./scripts/buildExamples.js",
-    "build:docs": "yarn typedoc",
+    "build:docs": "yarn typedoc && yarn build:examples-docs",
     "gen:api-types": "yarn nx run-many --target=gen:api-types --all",
     "build:clean": "nx reset && yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
