--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -17,7 +17,7 @@
     "next-auth": "4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.5.11"
+    "wagmi": "0.6.4"
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.0",
