--- a/packages/eslintConfig/package.json
+++ b/packages/eslintConfig/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": "^8.22.0"
+    "eslint": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint-plugin-import": "^2.26.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.1",
