--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -4,11 +4,14 @@
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
+    "@codemirror/language": "^0.20.0",
     "@moralisweb3/core": "^2.1.1",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
+    "graphql": "^16.6.0",
+    "graphql-ws": "^5.10.1",
     "moralis": "^2.1.1",
     "parse-dashboard": "^4.1.4",
     "parse-server": "^5.2.4"
@@ -27,6 +30,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc",
+    "gen:lockfile": "yarn install --mode update-lockfile",
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "dev:db-start": "mongodb-runner start",
