--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -13,11 +13,12 @@
     "eslint": "^8.22.0",
     "ethers": "5.6.9",
     "moralis": "^2.1.0",
-    "next": "12.2.3",
+    "next": "12.2.5",
     "next-auth": "4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "0.6.4"
+    "swr": "^1.3.0",
+    "wagmi": "^0.5.11"
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.0",
