--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -17,9 +17,20 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
+    "swr": "^1.3.0"
+  },
+  "devDependencies": {
+    "next-auth": "^4.10.3",
     "moralis": "^2.2.0",
     "next": "^12.2.5",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0"
+  },
+  "peerDependencies": {
+    "moralis": ">=2.2.0",
+    "next": "^12.2.5",
     "next-auth": "^4.10.3",
-    "swr": "^1.3.0"
+    "react-dom": ">=17.0.0",
+    "react": ">=17.0.0"
   }
 }
