refactor: split server and client for parse demo

--- a/demos/parse-server-migration/.env.example
+++ b/demos/parse-server-migration/.env.example
@@ -5,14 +5,15 @@ MORALIS_API_KEY = ''
 
 DATABASE_URI = 'mongodb://localhost:27017'
 
-CLOUD_PATH = './cloud/main.js'
+CLOUD_PATH = './build/cloud/main.js'
 
 MASTER_KEY = 'MASTER_KEY'
 APPLICATION_ID = 'APPLICATION_ID'
+SERVER_URL = 'http://localhost:1337/server'
 
 ALLOW_INSECURE_HTTP = 'true'
 
-REDIS_CONNECTION_STRING = ''
+REDIS_CONNECTION_STRING = 'redis://127.0.0.1:6379'
 RATE_LIMIT_TTL = 30
 RATE_LIMIT_AUTHENTICATED = 50
 RATE_LIMIT_ANONYMOUS = 60
