--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
       "packages/*",
       "demos/*",
       "demos/firebase-proxy/*",
-      "demos/firebase-auth/*",
-      "demos/parse-server-migration/*"
+      "demos/firebase-auth/*"
     ]
   },
   "resolutions": {
