--- a/demos/firebase-auth/functions/tsconfig.json
+++ b/demos/firebase-auth/functions/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "target": "es2017",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck":true
   },
   "compileOnSave": true,
   "include": ["src"]
