--- a/demos/parse-server-migration-react-client/package.json
+++ b/demos/parse-server-migration-react-client/package.json
@@ -7,14 +7,12 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.56",
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@walletconnect/web3-provider": "^1.8.0",
-    "@web3auth/web3auth": "^2.0.2",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "browserify-zlib": "^0.2.0",
@@ -30,7 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-moralis": "^1.4.2",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
