docs: update env example

--- a/demos/parse-server-migration/.env.example
+++ b/demos/parse-server-migration/.env.example
@@ -1,19 +1,24 @@
-
-PORT = 1337;
-
+# Your moralis Api key (keep this secret)
 MORALIS_API_KEY = ''
 
+# Default port wher parse-server will run on
+PORT = 1337;
+# Replace with a secret key of your choice (keep this secret)
+MASTER_KEY = 'MASTER_KEY'
+# Replace with any id of yout choice
+APPLICATION_ID = 'APPLICATION_ID'
+# Referenece to your server URL. Replace this when your app is hosted
+SERVER_URL = 'http://localhost:1337/server'
+# Path to your cloud code
+CLOUD_PATH = './build/cloud/main.js'
+# URI to your MongoDB database
 DATABASE_URI = 'mongodb://localhost:27017'
 
-CLOUD_PATH = './build/cloud/main.js'
-
-MASTER_KEY = 'MASTER_KEY'
-APPLICATION_ID = 'APPLICATION_ID'
-SERVER_URL = 'http://localhost:1337/server'
-
-ALLOW_INSECURE_HTTP = 'true'
-
+# Connection string for your redis instance in the format of redis://<host>:<port> or redis://<username>:<password>@<host>:<port>
 REDIS_CONNECTION_STRING = 'redis://127.0.0.1:6379'
+# Rate limit window in seconds
 RATE_LIMIT_TTL = 30
+# Rate limit requests per window for authenticated users
 RATE_LIMIT_AUTHENTICATED = 50
-RATE_LIMIT_ANONYMOUS = 60
+# Rate limit requests per window for anonymous users
+RATE_LIMIT_ANONYMOUS = 20
